feat: реализована приоритизация задач и проверка пересечений по времени - добавлены поля duration и startTime - реализован расчёт endTime - доработан класс Epic: duration, startTime, endTime вычисляются по подзадачам - реализован метод getPrioritizedTasks с хранением задач в TreeSet - добавлена проверка пересечения задач по времени с использованием BitSet для поиска за O(1) - обновлена сериализация/десериализация для сохранения новых полей - добавлены тесты для нового функционала